--- a/ngrok.yml
+++ b/ngrok.yml
@@ -1,2 +1,6 @@
 authtoken: 2g24gAa9jDWj8aQatuWrrixxlYK_5E7Y5UtoatnRuWx2Ta3Dg
 version: 2
+tunnel:
+  request_header:
+    add:
+      - "ngrok-skip-browser-warning:false"
