--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.1",
     "mysql": "^2.18.1",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
     "yarn": "^1.22.22"
   },
   "name": "backend",
