--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.10.1",
     "node-json-db": "^2.3.0",
+    "sequelize": "^6.37.3",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
     "yarn": "^1.22.22"
   },
